[package]
name = "onionpipe"
version = "0.2.2"
edition = "2021"
authors = ["Casey Marshall <git@cmars.tech>"]
license = "MIT OR Apache-2.0"
description = "Onion addresses for anything."
homepage = "https://github.com/cmars/onionpipe-rs/"
repository = "https://github.com/cmars/onionpipe-rs/"
documentation = "https://docs.rs/onionpipe"
readme = "README.md"

[lib]
name = "onionpipe"
path = "src/lib.rs"

[[bin]]
name = "onionpipe"
path = "src/bin/main.rs"

[dependencies]
base64 = "0.20.0"
futures-util = "0.3"
libtor = "47.8.0+0.4.7.x"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
torut = "0.2"
thiserror = "1.0.35"
tempfile = "3"
tokio-socks = "0.5.1"
regex = "1.7.0"
clap = { version = "4.1.4", features = ["env", "derive"] }
nom = "7.1.3"
